# ParticleVIT-Mixer

./: Makefile  README.md  augmentation.py  background_rej.py  config.py  download.py  evaluate_vit.py  loss.py  pe.py  plot_results.py  pyproject.toml  requirements.py  requirements.txt  run.py  run_jetnet.py  run_qc.py  run_tauid.py  run_topquark.py  run_training.py  run_wboson.py  test_graph_vit.py  training.ipynb  utils.py  wasam.py
configs/: curvature.py  jetclass_config.py  jetnet_150_config.py  jetnet_config.py  qg_config.py  tauid_config.py  toptag_config.py  wtag_config.py
data/: H4MLDataset.py  JetClassDataset.py  JetNetDataset.py  JetTauIdDataset.py  QGDataset.py  TopQuarkDataset.py  WTagDataset.py  config.py  preprocess.py  utils.py
graph_mixer/: __init__.py  data_processing.py  fasterkan.py  gMHA_gt.py  hrm.py  loss.py  mamba.py
graph_vit/: __init__.py  data_processing.py  gMHA_gt.py
