[project]
name = "particlevit-mixer"
version = "0.1.0"
description = ""
authors = [{ name = "Leonid Didukh", email = "ledidukh@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "torch-vision (>=0.1.6.dev0,<0.2.0)",
    "awkward (>=2.8.10,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "hdf5plugin (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)",
    "vector (>=1.7.0,<2.0.0)",
    "wandb (>=0.23.1,<0.24.0)",
    "zenodo-get (>=2.0.0,<3.0.0)",
    "lion-pytorch (>=0.2.3,<0.3.0)",
    "torch-ema (>=0.3,<0.4)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)",
    "mixture-of-experts (>=0.2.3,<0.3.0)",
    "torch-scatter",
    "torch-cluster",
    "torch-sparse",
    "torch-geometric",
    "soft_moe",
    "adam_atan2_pytorch",
    "adabelief_pytorch",
    "lightning",
    "uproot",
    "fastparquet",
    "datasets",
    "matplotlib",
    "x-transformers"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
